proj1/tests/other-tests/minz-tests/error/if_bad2.py
if True False:
	print "asdf"
